--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="The 📜 OpenCerts Privacy Filter helps you to 🔍 find potential fields in your OpenCerts certificate that you can ⬛ redact." />
+  <meta name="description" content="This tool helps you to 🔍 locate potential fields in your OpenCerts that may reveal sensitive information, so that you can ⬛ redact them before sharing with others." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
